--- a/src/resources/sass/components/_equipe.sass
+++ b/src/resources/sass/components/_equipe.sass
@@ -2,8 +2,8 @@
 @import './_responsive'
 
 .s-equipe
-  border-top: 1px solid $bege-padrao
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1)
+  // border-top: 1px solid $bege-padrao
+  // box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1)
   .container
     h2
       font-size: 35px
@@ -42,8 +42,8 @@
 
 @media only screen and (max-width: 456px)
   .s-equipe
-    border-top: 1px solid $bege-padrao
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1)
+    // border-top: 1px solid $bege-padrao
+    // box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1)
     .container
       h2
         font-size: 35px
