--- a/src/resources/sass/components/_header.sass
+++ b/src/resources/sass/components/_header.sass
@@ -84,7 +84,7 @@ nav
 .submenu 
   display: none
   position: absolute
-  box-shadow: 1px 1px 4px 2px rgba(0,0,0,.11)
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.04)
   border-radius: 2px
   background-color: #fff
   color: #000
@@ -93,8 +93,8 @@ nav
   min-width: 250px
   z-index: 1111
   li
-    padding: 0.85rem 2.5rem !important
-    box-shadow: inset 0px -10px 10px -15px rgba(0,0,0,0.75)
+    padding: 1rem 2.5rem !important
+    box-shadow: inset 0px -10px 10px -15px rgba(0, 0, 0, 0.226)
     display: block !important
     margin-bottom: 0 !important
     line-height: 120%
@@ -125,8 +125,8 @@ nav
   left: 102%
   white-space: nowrap
   li
-    padding: 0.85rem 2.5rem !important
-    box-shadow: inset 0px -10px 10px -15px rgba(0,0,0,0.75)
+    padding: 1rem 2.5rem !important
+    box-shadow: inset 0px -10px 10px -15px rgba(0,0,0,0.226)
     display: block !important
     margin-bottom: 0 !important
     line-height: 120%
