--- a/src/resources/sass/components/_depoimentos.sass
+++ b/src/resources/sass/components/_depoimentos.sass
@@ -1,5 +1,5 @@
 @import './_pattern'
-@import './_responsive'
+// @import './_responsive'
 
 
 .s-depoimento
@@ -11,32 +11,3 @@
         text-align: center
         margin-bottom: 2rem
         color: #fff
-
-.checked
-  color: #fff
-  margin-right: 0.5rem
-
-.slick-slide
-  p
-    max-width: 80%
-    color: #fff
-  h3
-    color: #fff
-    margin-bottom: 1rem
-
-@media only screen and (max-width: 769px)
-  .depoimentos-itens
-    margin-left: 0 !important
-    padding: 1rem !important
-    img
-      width: 80px !important
-      height: 80px !important
-    .text-apost
-      width: 100%
-
-  #reviews-carousel
-    padding: 0 3rem !important
-  
-  .box-depoimento 
-    div
-      padding: 0 !important
