--- a/src/resources/sass/main.sass
+++ b/src/resources/sass/main.sass
@@ -14,3 +14,4 @@
 @import './components/_button-wpp'
 @import './components/_fonts'
 @import './components/_page-blog'
+@import './components/_depoimento'
