--- a/src/resources/sass/components/_contato.sass
+++ b/src/resources/sass/components/_contato.sass
@@ -6,7 +6,7 @@
   flex-direction: column
   justify-content: center
   align-items: center
-  background-image: url("https://www.aclinicaoral.com.br/wp-content/uploads/background-agendar-consulta.webp")
+  background-image: url("https://www.aclinicaoral.com.br/wp-content/uploads/background-agendar-consulta.jpg")
   padding-bottom: 4rem
   margin-top: 15rem
   .box-contato
@@ -120,7 +120,7 @@
     flex-direction: column
     justify-content: center
     align-items: center
-    background-image: url("https://www.aclinicaoral.com.br/wp-content/uploads/background-agendar-consulta.webp")
+    background-image: url("https://www.aclinicaoral.com.br/wp-content/uploads/background-agendar-consulta.jpg")
     padding-bottom: 4rem
     .box-contato
       background: #fff
@@ -200,7 +200,7 @@
     flex-direction: column
     justify-content: center
     align-items: center
-    background-image: url("https://www.aclinicaoral.com.br/wp-content/uploads/background-agendar-consulta.webp")
+    background-image: url("https://www.aclinicaoral.com.br/wp-content/uploads/background-agendar-consulta.jpg")
     padding-bottom: 4rem
     .box-contato
       background: #fff
@@ -240,7 +240,7 @@
               align-items: center
               justify-content: center
               .button-contato-zap
-                width: 70%
+                width: 120% !important
                 display: flex
                 align-items: center
                 border: 2px solid $bege-padrao
@@ -255,7 +255,7 @@
                   transform: translateY(-3px)
                   transition: all 0.2s
               .button-contato-agenda
-                width: 70%
+                width: 120% !important
                 display: flex
                 align-items: center
                 border: 2px solid $bege-padrao
