--- a/src/resources/sass/components/_depoimento.sass
+++ b/src/resources/sass/components/_depoimento.sass
@@ -43,3 +43,7 @@
 
 .slick-dots li.slick-active button:before
     color: #fff !important
+
+@media only screen and (max-width: 456px)
+    .s-depoimento
+        margin: 8rem 0 !important
