--- a/src/resources/sass/main.sass
+++ b/src/resources/sass/main.sass
@@ -15,3 +15,4 @@
 @import './components/_fonts'
 @import './components/_page-blog'
 @import './components/_depoimento'
+@import './components/_privacidade'
