--- a/src/resources/sass/main.css
+++ b/src/resources/sass/main.css
@@ -363,7 +363,7 @@ body {
     justify-content: center;
   }
   .s-contato .box-contato .container .info-contato .info-contato-left .buttons-contato .button-contato-zap {
-    width: 70%;
+    width: 120% !important;
     display: flex;
     align-items: center;
     border: 2px solid #c8bcac;
@@ -1983,4 +1983,44 @@ body {
 
 .slick-dots li.slick-active button:before {
   color: #fff !important;
+}
+
+@media only screen and (max-width: 456px) {
+  .s-depoimento {
+    margin: 8rem 0 !important;
+  }
+}
+body {
+  font-family: "Roboto";
+}
+
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 768px) {
+  h2 {
+    font-size: 3.5rem !important;
+  }
+  p {
+    font-size: 1.4rem !important;
+    line-height: 2rem;
+  }
+}
+.s-politica-de-privacidade {
+  margin-top: 17rem;
+}
+.s-politica-de-privacidade .container .box-privacidade h2 {
+  color: #c8bcac;
+  font-size: 4rem;
+  margin-bottom: 3rem;
+  text-align: center;
+}
+.s-politica-de-privacidade .container .box-privacidade .itens-cookies {
+  margin: 2rem 0;
+}
+.s-politica-de-privacidade .container .box-privacidade .itens-cookies strong {
+  color: #c8bcac;
+  font-size: 2.6rem;
 }/*# sourceMappingURL=main.css.map */
