--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -2023,4 +2023,11 @@ body {
 .s-politica-de-privacidade .container .box-privacidade .itens-cookies strong {
   color: #c8bcac;
   font-size: 2.6rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .s-politica-de-privacidade {
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
 }/*# sourceMappingURL=main.css.map */
