--- a/src/resources/sass/components/_privacidade.sass
+++ b/src/resources/sass/components/_privacidade.sass
@@ -15,3 +15,8 @@
         strong
           color: $bege-padrao
           font-size: 2.6rem
+
+@media only screen and (max-width: 768px)
+  .s-politica-de-privacidade
+    margin-left: 3rem
+    margin-right: 3rem
