--- a/src/resources/sass/components/_index.sass
+++ b/src/resources/sass/components/_index.sass
@@ -178,4 +178,6 @@
         padding: 0
         .img-right-tratamentoBase
           margin: 10% 0% 0%
+  #gt_float_wrapper
+    bottom: 40px !important
       
