--- a/src/resources/sass/components/_localizacao.sass
+++ b/src/resources/sass/components/_localizacao.sass
@@ -2,7 +2,7 @@
 @import './_responsive'
 
 .s-localizacao
-  background-image: url("https://www.aclinicaoral.com.br/wp-content/uploads/background-agendar-consulta.webp")
+  background-image: url("resources/img/background-agendar-consulta.webp")
   background-repeat: no-repeat
   background-position: center
   padding-top: 4rem
@@ -69,7 +69,7 @@
 
 @media only screen and (max-width: 456px)
   .s-localizacao
-    background-image: url("https://www.aclinicaoral.com.br/wp-content/uploads/background-agendar-consulta.webp")
+    background-image: url("resources/img/background-agendar-consulta.webp")
     background-repeat: no-repeat
     background-position: center
     padding-top: 4rem
