--- a/src/resources/sass/main.css
+++ b/src/resources/sass/main.css
@@ -1080,7 +1080,7 @@ body {
 }
 @media only screen and (max-width: 456px) {
   .s-tratamento-base {
-    margin: 6rem 0;
+    margin: 12rem 0;
   }
   .s-tratamento-base .info-tratamento-base {
     display: block;
@@ -1336,6 +1336,9 @@ body {
   }
   .s-tratamento-base .info-tratamento-base .tratamentoBase-right .img-right-tratamentoBase {
     margin: 10% 0% 0%;
+  }
+  #gt_float_wrapper {
+    bottom: 40px !important;
   }
 }
 body {
