ajustes design e pedidos v4 company

--- a/src/resources/sass/components/_banner.sass
+++ b/src/resources/sass/components/_banner.sass
@@ -34,7 +34,7 @@
           line-height: 4rem
           margin-bottom: 2rem
         h1
-          font-size: 19px
+          font-size: 2.8rem
           color: $branco-padrao
           font-weight: 500
 
@@ -50,4 +50,4 @@
     p
       font-size: 39px !important
     h1
-      font-size: 19px !important
+      font-size: 2.8rem !important
