--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -811,7 +811,7 @@ body {
             align-items: center;
     gap: 2rem !important; }
     .mobile-dayClinic .infos-mobile-dayClinic .ligar-mobile-dayClinic a {
-      padding: 1rem 5rem;
+      padding: 1rem 3rem;
       background: #c8bcac;
       color: #fff;
       -webkit-border-radius: 30px;
@@ -819,7 +819,7 @@ body {
       .mobile-dayClinic .infos-mobile-dayClinic .ligar-mobile-dayClinic a i {
         font-size: 1.5rem; }
     .mobile-dayClinic .infos-mobile-dayClinic .mapa-mobile-dayClinic a {
-      padding: 1rem 5rem;
+      padding: 1rem 3rem;
       border: 2px solid #c8bcac;
       -webkit-border-radius: 30px;
               border-radius: 30px;
@@ -977,7 +977,7 @@ body {
     line-height: 4rem;
     margin-bottom: 2rem; }
   .s-banner .container .msgBanner .text-first h1 {
-    font-size: 19px;
+    font-size: 2.8rem;
     color: #ffffff;
     font-weight: 500; }
   .s-banner .container .msgBanner h3 {
@@ -990,7 +990,7 @@ body {
   .text-first p {
     font-size: 39px !important; }
   .text-first h1 {
-    font-size: 19px !important; } }
+    font-size: 2.8rem !important; } }
 
 body {
   font-family: 'Roboto'; }
@@ -1356,7 +1356,7 @@ body {
 
 @media only screen and (max-width: 456px) {
   .s-tratamento-base {
-    margin: 6rem 0; }
+    margin: 12rem 0; }
     .s-tratamento-base .info-tratamento-base {
       display: block;
       width: 100%; }
@@ -1689,7 +1689,8 @@ header {
           box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.33);
   position: fixed;
   z-index: 1111;
-  top: 0; }
+  top: 0;
+  display: none; }
 
 /* Estilos para os links do header */
 header a {
@@ -2143,6 +2144,83 @@ body {
   text-transform: uppercase;
   text-align: center;
   white-space: nowrap; }
+
+.s-whatsAppButton .whatsapp-link {
+  position: fixed;
+  bottom: 3rem;
+  left: 4rem;
+  background-color: #25D366;
+  color: #FFF;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  font-size: 30px;
+  z-index: 9999;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
+  .s-whatsAppButton .whatsapp-link:hover {
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1);
+    -webkit-box-shadow: 0px 0px 15px #25D366;
+            box-shadow: 0px 0px 15px #25D366; }
+  .s-whatsAppButton .whatsapp-link .whatsapp-icon {
+    font-size: 4rem;
+    margin-top: 2px; }
+
+@media only screen and (max-width: 820px) {
+  .s-whatsAppButton .whatsapp-link {
+    position: fixed;
+    bottom: 4rem;
+    left: 3rem;
+    background-color: #25D366;
+    color: #FFF;
+    -webkit-border-radius: 50%;
+            border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-decoration: none;
+    font-size: 30px;
+    z-index: 9999;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+    .s-whatsAppButton .whatsapp-link:hover {
+      -webkit-transform: scale(1.1);
+          -ms-transform: scale(1.1);
+              transform: scale(1.1);
+      -webkit-box-shadow: 0px 0px 15px #25D366;
+              box-shadow: 0px 0px 15px #25D366; }
+    .s-whatsAppButton .whatsapp-link .whatsapp-icon {
+      font-size: 4rem;
+      margin-top: 2px; } }
 
 @font-face {
   font-family: 'Gotham Regular Bold';
