--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -1689,8 +1689,7 @@ header {
           box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.33);
   position: fixed;
   z-index: 1111;
-  top: 0;
-  display: none; }
+  top: 0; }
 
 /* Estilos para os links do header */
 header a {
