--- a/src/resources/sass/main.css
+++ b/src/resources/sass/main.css
@@ -768,7 +768,7 @@ body {
   margin-bottom: 2rem;
 }
 .s-banner .container .msgBanner .text-first h1 {
-  font-size: 19px;
+  font-size: 2.8rem;
   color: #ffffff;
   font-weight: 500;
 }
@@ -785,7 +785,7 @@ body {
     font-size: 39px !important;
   }
   .text-first h1 {
-    font-size: 19px !important;
+    font-size: 2.8rem !important;
   }
 }
 body {
@@ -1371,6 +1371,7 @@ header {
   position: fixed;
   z-index: 1111;
   top: 0;
+  display: none !important;
 }
 
 /* Estilos para os links do header */
@@ -1832,6 +1833,58 @@ body {
   white-space: nowrap;
 }
 
+.s-whatsAppButton .whatsapp-link {
+  position: fixed;
+  bottom: 3rem;
+  left: 4rem;
+  background-color: #25D366;
+  color: #FFF;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  font-size: 30px;
+  z-index: 9999;
+  transition: all 0.3s ease-in-out;
+}
+.s-whatsAppButton .whatsapp-link:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 0px 15px #25D366;
+}
+.s-whatsAppButton .whatsapp-link .whatsapp-icon {
+  font-size: 4rem;
+  margin-top: 2px;
+}
+@media only screen and (max-width: 820px) {
+  .s-whatsAppButton .whatsapp-link {
+    position: fixed;
+    bottom: 4rem;
+    left: 3rem;
+    background-color: #25D366;
+    color: #FFF;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    font-size: 30px;
+    z-index: 9999;
+    transition: all 0.3s ease-in-out;
+  }
+  .s-whatsAppButton .whatsapp-link:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 0px 15px #25D366;
+  }
+  .s-whatsAppButton .whatsapp-link .whatsapp-icon {
+    font-size: 4rem;
+    margin-top: 2px;
+  }
+}
 @font-face {
   font-family: "Gotham Regular Bold";
   src: url("../fonts/Gotham.ttf") format("truetype"), url("../fonts/Gotham.woff") format("truetype");
